Bug #1946 - WP Dashboard > formatting issues
This involved a couple of steps:

1) Moving truncation on the fly functionality to MU Plugins so it can be
used on the  adminbar
2) Applying truncate on the fly to the respecive instances of group names
and user names
3) Some refactoring of the adminbar layout and styling to give the user
names a flexible space to occupy

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -248,9 +248,9 @@
                                 &:focus {
                                 color: @darkTeal;
                             }
-			    &.btn {
-			        text-decoration: none;
-			    }
+                            &.btn {
+                                text-decoration: none;
+                            }
                         }
                     }
                 }
@@ -367,7 +367,7 @@
             }
             #wp-admin-bar-site-name{
                 border-left: none;
-		max-width: 320px;
+                max-width: 320px;
             }
             #wp-admin-bar-my-openlab,
             #wp-admin-bar-network-menu-mobile{
@@ -404,7 +404,6 @@
                 }
             }
             #wp-admin-bar-my-account{
-		max-width: 220px;
                 .ab-sub-wrapper{
                     width: 150%;
                     min-width: 250px;
@@ -704,9 +703,9 @@
     .see-all {
         font-size: 12px;
         text-decoration: underline;
-	a {
+        a {
             text-decoration: underline;
-	}
+        }
     }
 
     /**footer - also a sitewide component**/
@@ -767,10 +766,10 @@
                     margin: 0 auto 8px;
                 }
             }
-	    h3{
-		font-size: 13px;
-		text-decoration: underline;
-	    }
+            h3{
+                font-size: 13px;
+                text-decoration: underline;
+            }
         }
         .col-logos{
             display: inline-block;
@@ -853,16 +852,16 @@
             }
         }
         .col-copyright{
-	    padding-right: 0;
-	    ul {
-		font-style: italic;
-		padding-left: 0;
-		list-style-type: none;
-		font-size: 13px;
-	    }
-	    img {
-		margin-left: 8px;
-	    }
+            padding-right: 0;
+            ul {
+                font-style: italic;
+                padding-left: 0;
+                list-style-type: none;
+                font-size: 13px;
+            }
+            img {
+                margin-left: 8px;
+            }
             @media (max-width: @screen-xs-max){
                 margin-top: 20px;
                 margin-bottom: 24px;
@@ -933,6 +932,23 @@
                 position: absolute;
                 right: 0;
                 z-index: -1;
+            }
+            .ab-top-menu{
+                float: left;
+            }
+            .ab-top-secondary{
+                float: right;
+            }
+            .ab-blogs-and-admin-centered{
+                float: none;
+                overflow: hidden;
+                text-align: right;
+                #wp-admin-bar-my-account{
+                    width: 100%;
+                }
+                @media (max-width: @screen-sm-max){
+                    text-align: center;
+                }
             }
             #wp-toolbar{
                 > ul{
